--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "dev:json": "json-server --watch db.json --port 4000"
   },
   "dependencies": {
     "axios": "^1.13.2",
@@ -27,7 +28,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
+    "json-server": "^1.0.0-beta.3",
     "tailwindcss": "^4",
     "typescript": "^5"
-  }
-}
+  }}
+
