--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
+    "cookies-next": "^6.1.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-hot-toast": "^2.6.0",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
@@ -31,5 +33,5 @@
     "json-server": "^1.0.0-beta.3",
     "tailwindcss": "^4",
     "typescript": "^5"
-  }}
-
+  }
+}
